--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,6 +8,7 @@ import "../styles/main.css";
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tally Counter</title>
+	<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 </head>
 
 <body class="min-h-screen bg-gradient-to-br from-gray-50 to-white flex items-center justify-center p-6">
