class fields explicitly to DOM

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -95,16 +95,16 @@ import "../styles/main.css";
 			history;
 			startTime;
 			isDark;
-			counterEl;
-			totalTapsEl;
-			sessionTimeEl;
-			incrementBtn;
-			decrementBtn;
-			resetBtn;
-			undoBtn;
-			themeToggle;
-			sunIcon;
-			moonIcon;
+			counterEl: HTMLElement | null;
+			totalTapsEl: HTMLElement | null;
+			sessionTimeEl: HTMLElement | null;
+			incrementBtn: HTMLElement | null;
+			decrementBtn: HTMLElement | null;
+			resetBtn: HTMLElement | null;
+			undoBtn: HTMLElement | null;
+			themeToggle: HTMLElement | null;
+			sunIcon: HTMLElement | null;
+			moonIcon: HTMLElement | null;
 
 		constructor() {
 			this.count = 0;
