history variable as an array of numbers

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -92,7 +92,7 @@ import "../styles/main.css";
 	   class ModernMinimalistCounter {
 			count;
 			totalTaps;
-			history;
+			history: number[];
 			startTime;
 			isDark;
 			counterEl: HTMLElement | null;
