parameter as a string in setStoredTheme

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -191,7 +191,7 @@ import "../styles/main.css";
 			}
 		}
 
-		setStoredTheme(theme) {
+		setStoredTheme(theme: string) {
 			try {
 				localStorage.setItem('theme', theme);
 			} catch {
