this.undoBtn cast to HTMLButtonElement

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -269,7 +269,7 @@ import "../styles/main.css";
 				this.totalTapsEl.textContent = this.totalTaps.toLocaleString();
 			}
 			if (this.undoBtn) {
-				this.undoBtn.disabled = this.history.length === 0;
+				(this.undoBtn as HTMLButtonElement).disabled = this.history.length === 0;
 			}
 		}
 
