null check for this.animateButton again because HTMLElement made shit worse

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -165,7 +165,7 @@ import "../styles/main.css";
 					case 'Space':
 						e.preventDefault();
 						this.increment();
-						this.animateButton(this.incrementBtn);
+						if (this.incrementBtn) this.animateButton(this.incrementBtn);
 						break;
 					case 'Backspace':
 						e.preventDefault();
